--- a/druid/templates/router/deployment.yaml
+++ b/druid/templates/router/deployment.yaml
@@ -39,11 +39,11 @@ spec:
           - name: druid_zk_service_host
             value: "{{ .Values.zkHosts }}"
           {{- end }}
-          - name: JAVA_OPTS
-            value: {{ .Values.router.javaOpts }}
           - name: druid_extensions_loadList
             value: {{ .Values.extensions.loadList | toJson | quote }}
-          {{- range $key, $value :=  .Values.env }}
+          - name: JAVA_OPTS
+            value: {{ .Values.router.javaOpts }}
+          {{- range $key, $value :=  mergeOverwrite .Values.env .Values.router.env }}
           - name: {{ $key }}
             value: {{ $value | quote }}
           {{- end }}
