--- a/druid/templates/middleManager/statefulset.yaml
+++ b/druid/templates/middleManager/statefulset.yaml
@@ -101,7 +101,7 @@ spec:
         - containerPort: {{ .Values.middleManager.port }}
           name: http
         volumeMounts:
-        - mountPath: /var/druid/
+        - mountPath: /opt/druid/var
           name: data
   {{- if not .Values.middleManager.persistence.enabled }}
       volumes:
