added monitoring, upgrade to 0.17.0 & switch to apache/druid image (no incubation)

--- a/druid/templates/broker/deployment.yaml
+++ b/druid/templates/broker/deployment.yaml
@@ -47,6 +47,14 @@ spec:
           {{- end }}
           - name: druid_extensions_loadList
             value: {{ .Values.extensions.loadList | toJson | quote }}
+          {{- if .Values.monitoring.enabled }}
+          - name: druid_monitoring_monitors
+            value: '["org.apache.druid.server.metrics.QueryCountStatsMonitor"]'
+          - name: druid_emitter
+            value: http
+          - name: druid_emitter_http_recipientBaseUrl
+            value: "http://localhost:{{ .Values.monitoring.port }}"
+          {{- end}}
           ports:
             - name: http
               containerPort: {{ .Values.broker.port }}
@@ -63,6 +71,25 @@ spec:
               port: {{ .Values.broker.port }}
           resources:
 {{ toYaml .Values.broker.resources | indent 12 }}
+
+        {{- if .Values.monitoring.enabled }}
+        - name: druid-metrics-exporter
+          image: featurefm/druid-exporter
+          imagePullPolicy: Always
+          command: [".venv/bin/druid_exporter", "--debug", "--listen=:{{ .Values.monitoring.port }}"]
+          ports:
+            - name: metrics
+              containerPort: {{ .Values.monitoring.port }}
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: metrics
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: metrics
+        {{- end }}
+
     {{- with .Values.broker.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
