--- a/druid/templates/historical/statefulset.yaml
+++ b/druid/templates/historical/statefulset.yaml
@@ -82,6 +82,14 @@ spec:
         - name: {{ $key }}
           value: {{ $value | quote }}
         {{- end }}
+        {{- if .Values.monitoring.enabled }}
+        - name: druid_monitoring_monitors
+          value: '["org.apache.druid.server.metrics.HistoricalMetricsMonitor","org.apache.druid.server.metrics.QueryCountStatsMonitor"]'
+        - name: druid_emitter
+          value: http
+        - name: druid_emitter_http_recipientBaseUrl
+          value: "http://localhost:{{ .Values.monitoring.port }}"
+        {{- end}}
         resources:
 {{ toYaml .Values.historical.resources | indent 12 }}
         livenessProbe:
@@ -104,6 +112,27 @@ spec:
         volumeMounts:
         - mountPath: /opt/druid/var
           name: data
+
+
+      {{- if .Values.monitoring.enabled }}
+      - name: druid-metrics-exporter
+        image: featurefm/druid-exporter
+        imagePullPolicy: Always
+        command: [".venv/bin/druid_exporter", "--debug", "--listen=:{{ .Values.monitoring.port }}"]
+        ports:
+          - name: metrics
+            containerPort: {{ .Values.monitoring.port }}
+        livenessProbe:
+          httpGet:
+            path: /metrics
+            port: metrics
+        readinessProbe:
+          httpGet:
+            path: /metrics
+            port: metrics
+      {{- end }}
+
+
   {{- if not .Values.historical.persistence.enabled }}
       volumes:
       - name: data
