fixed metadata postgres to work with any release name

--- a/druid/templates/coordinator/deployment.yaml
+++ b/druid/templates/coordinator/deployment.yaml
@@ -39,6 +39,16 @@ spec:
         - name: druid_zk_service_host
           value: {{ .Values.zkHosts }}
         {{- end }}
+        {{- if .Values.postgresql.enabled }}
+        - name: druid_metadata_storage_type
+          value: postgresql
+        - name: druid_metadata_storage_connector_connectURI
+          value: "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/{{ .Values.postgresql.postgresqlDatabase }}"
+        - name: druid_metadata_storage_connector_user
+          value: "{{ .Values.postgresql.postgresqlUsername }}"
+        - name: druid_metadata_storage_connector_password
+          value: "{{ .Values.postgresql.postgresqlPassword }}"
+        {{- end }}
         - name: JAVA_OPTS
           value: {{ .Values.coordinator.javaOpts }}
         {{- range $key, $value :=  mergeOverwrite .Values.env .Values.coordinator.env }}
