--- a/druid/Chart.yaml
+++ b/druid/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 appVersion: 0.17.0
-description: Apache Druid (incubating) is a high performance analytics data store for event-driven data.
+description: Apache Druid is a high performance analytics data store for event-driven data.
 name: druid
-version: 0.3.7
+version: 0.3.8
 home: http://druid.io/
 icon: http://druid.io/img/druid_nav.png
 maintainers:
