--- a/druid/values.yaml
+++ b/druid/values.yaml
@@ -37,7 +37,7 @@ env:
   druid_processing_buffer_sizeBytes: "10000000"
   druid_processing_numMergeBuffers: "4"
   druid_processing_numThreads: "16"
-  druid.server.maxSize: "8000000000"
+  druid_server_maxSize: "8000000000"
 
   druid_worker_capacity: "4"
   druid_indexer_fork_property_druid_processing_numMergeBuffers: "2"
@@ -181,6 +181,9 @@ historical:
     accessMode: ReadWriteOnce
     size: "4Gi"
     # storageClass: "ssd"
+  health:
+    livenessInitialDelaySeconds: 120
+    readinessInitialDelaySeconds: 120
   antiAffinity: "soft"
   nodeAffinity: {}
   nodeSelector: {}
@@ -223,6 +226,9 @@ middleManager:
     accessMode: ReadWriteOnce
     size: "4Gi"
     # storageClass: "ssd"
+  health:
+    livenessInitialDelaySeconds: 60
+    readinessInitialDelaySeconds: 60
   antiAffinity: "soft"
   nodeAffinity: {}
   nodeSelector: {}
