--- a/presto/Chart.yaml
+++ b/presto/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 appVersion: 0.351
 description: Distributed SQL query engine for running interactive analytic queries
 name: presto
-version: 0.4.1
+version: 0.4.2
 home: https://prestosql.io
 icon: https://prestosql.io/assets/presto.png
 sources:
   - https://github.com/prestosql/presto
 maintainers:
-  - name: ram
-    email: ram@feature.fm
+  - name: lior
+    email: liors@feature.fm
