--- a/presto/values.yaml
+++ b/presto/values.yaml
@@ -2,12 +2,12 @@ server:
   workers: 2
   node:
     environment: k8s
-    dataDir: /data/presto
+    dataDir: /data/trino
   log:
     presto:
       level: INFO
   config:
-    path: /usr/lib/presto/etc
+    path: /usr/lib/trino/etc
     http:
       port: 8080
     query:
@@ -21,8 +21,8 @@ server:
   catalog:
     log.properties: |
       connector.name=localfile
-      presto-logs.http-request-log.location=/data/presto/var/log
-      presto-logs.http-request-log.pattern=*.log
+      trino-logs.http-request-log.location=/data/trino/var/log
+      trino-logs.http-request-log.pattern=*.log
 
 image:
   repository: trinodb/trino
