--- a/druid/requirements.yaml
+++ b/druid/requirements.yaml
@@ -1,9 +1,9 @@
 dependencies:
 - name: zookeeper
   version: 1.2.0
-  repository: https://kubernetes-charts-incubator.storage.googleapis.com/
+  repository: https://charts.bitnami.com/bitnami
   condition: zookeeper.enabled
 - name: postgresql
   version: 7.2.0
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.bitnami.com/bitnami
   condition: postgresql.enabled
