--- a/druid/requirements.yaml
+++ b/druid/requirements.yaml
@@ -1,9 +1,9 @@
 dependencies:
 - name: zookeeper
-  version: 1.4.2
-  repository: https://charts.bitnami.com/bitnami
+  version: 3.0.8
+  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   condition: zookeeper.enabled
 - name: postgresql
   version: 7.2.0
-  repository: https://charts.bitnami.com/bitnami
+  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   condition: postgresql.enabled
