upgrade to version 0.22

--- a/druid/values.yaml
+++ b/druid/values.yaml
@@ -276,7 +276,8 @@ zookeeper:
 # ------------------------------------------------------------------------------
 postgresql:
   enabled: true
-  postgresqlPostgresPassword: druidroot
-  postgresqlUsername: druid
-  postgresqlPassword: druid
-  postgresqlDatabase: druid
+  auth:
+    postgresPassword: druidroot
+    username: druid
+    password: druid
+    database: druid
