upgrade to version 0.22

--- a/druid/templates/historical/statefulset.yaml
+++ b/druid/templates/historical/statefulset.yaml
@@ -78,11 +78,11 @@ spec:
         - name: druid_metadata_storage_type
           value: postgresql
         - name: druid_metadata_storage_connector_connectURI
-          value: "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/{{ .Values.postgresql.postgresqlDatabase }}"
+          value: "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/{{ .Values.postgresql.auth.database }}"
         - name: druid_metadata_storage_connector_user
-          value: "{{ .Values.postgresql.postgresqlUsername }}"
+          value: "{{ .Values.postgresql.auth.username }}"
         - name: druid_metadata_storage_connector_password
-          value: "{{ .Values.postgresql.postgresqlPassword }}"
+          value: "{{ .Values.postgresql.auth.password }}"
         {{- end }}
         - name: druid_extensions_loadList
           value: {{ .Values.extensions.loadList | toJson | quote }}
