--- a/druid/templates/coordinator/deployment.yaml
+++ b/druid/templates/coordinator/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       {{- with .Values.coordinator.podAnnotations }}
       annotations:
 {{ toYaml . | indent 8 }}
-      {{- end }} 
+      {{- end }}
     spec:
       containers:
       - name: {{ include "druid.coordinator.fullname" . }}
@@ -43,11 +43,11 @@ spec:
         - name: druid_metadata_storage_type
           value: postgresql
         - name: druid_metadata_storage_connector_connectURI
-          value: "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/{{ .Values.postgresql.postgresqlDatabase }}"
+          value: "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/{{ .Values.postgresql.auth.database }}"
         - name: druid_metadata_storage_connector_user
-          value: "{{ .Values.postgresql.postgresqlUsername }}"
+          value: "{{ .Values.postgresql.auth.username }}"
         - name: druid_metadata_storage_connector_password
-          value: "{{ .Values.postgresql.postgresqlPassword }}"
+          value: "{{ .Values.postgresql.auth.password }}"
         {{- end }}
         - name: JAVA_OPTS
           value: {{ .Values.coordinator.javaOpts }}
