--- a/druid/requirements.yaml
+++ b/druid/requirements.yaml
@@ -4,6 +4,6 @@ dependencies:
   repository: https://charts.bitnami.com/bitnami
   condition: zookeeper.enabled
 - name: postgresql
-  version: 12.12.10
-  repository: https://charts.bitnami.com/bitnami
+  version: 7.2.0
+  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   condition: postgresql.enabled
